# Star-Search

./: CMakeLists.txt
src/: main  main.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
